<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/text_fontsize24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_welcome"
        android:textColor="@color/green_ber"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/text_fontsize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/app_name"
        android:textColor="@color/green_ber"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17037037" />

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/f_margin"
        android:background="@drawable/shape_card"
        android:orientation="vertical"
        android:padding="@dimen/textview_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingBottom="@dimen/textview_padding"
            android:hint="@string/app_username"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/app_password"
            app:counterMaxLength="8"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLength="8"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/bt_login"
        style="@style/FormButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:layout_marginHorizontal="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_noRegis"
            style="@style/text_fontsize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_notRegis"
            android:textColor="#80CBC4" />

        <TextView
            android:id="@+id/tv_regis"
            style="@style/text_fontsize16.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_regis"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
